--- a/ml_p1.ipynb
+++ b/ml_p1.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOdIe0PaYhNsulmZIUJQ9Oh",
+      "mount_file_id": "https://gist.github.com/rafi1105/e195e69430bbe384309f9f5fbb925c08#file-ml-p1-ipynb",
+      "authorship_tag": "ABX9TyOtYP9T3+YRx782NNY0J27Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +28,66 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [],
       "metadata": {
-        "id": "RcSdzycv1Ko2"
+        "id": "Aj0bfpJo2m9d"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Starting"
+      ],
+      "metadata": {
+        "id": "gvE5AwHe2ptz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "e47W_5wc2tAf"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Import dataset drive**"
+      ],
+      "metadata": {
+        "id": "D1Rg3QA15bBm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# prompt: drive connect data set\n",
+        "\n",
+        "# Mount Google Drive\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# Replace 'your_dataset.csv' with the actual path to your dataset in Google Drive\n",
+        "heart = '/content/drive/MyDrive/dataset/heat problem/heart.csv'\n",
+        "insurance = '/content/drive/MyDrive/dataset/heat problem/insurance.csv'"
+      ],
+      "metadata": {
+        "id": "TlgpkUe94yvK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "dP85COMl6D0_"
+      }
     }
   ]
 }
